# hackathon-mistral-mcp

./: .gitignore  Prompt.md  README.md  TEST_INSTRUCTIONS.md  TODO.md  code_to_send.py  code_to_send.txt  code_to_send_engine.txt  code_to_send_mcp.txt  code_to_send_ui.txt  mcp_stdio_server.py  package-lock.json  pyproject.toml  requirements.txt  start-dev.sh  test_mistral_mcp.py
backend/: ALPIC_DEPLOYMENT.md  DEPLOYMENT.md  Procfile  README.md  mcp_server.py  mcp_stdio_server.py  mistral_ai_player.py  mistral_config.json  railway.json  requirements.txt  run_server.py  test_client.py  test_websocket.py  websocket_manager.py
backend/config/: server_config.json
engine/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  railway.toml  tsconfig-paths-bootstrap.js  tsconfig.json
engine/src/: index.ts  server.ts
engine/src/config/: constants.ts
engine/src/core/: GameEngine.old.ts  GameEngine.ts  GameRoom.ts  TickManager.ts
engine/src/mcp/: gameManager.ts  mcpServer.ts  mcpServerNew.ts  protocol.ts  tools.ts  types.ts
engine/src/types/: server.ts
engine/src/websocket/: WSManager.ts
mcp-server/: README.md  pyproject.toml  requirements.txt  server.py
test_mcp/: README.md  test_endpoints.py  test_error_scenarios.py  test_final_validation.py  test_mcp_server.py
ui/: CURL.md  README.md  TODO.md  package-lock.json  package.json
ui/public/: haha.avif
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ClashTimer.tsx  Emote.tsx  GameEndScreen.tsx  TowerHealthBar.tsx  TransitionScreen.tsx
ui/src/game/: GameEngine.ts  Giant.ts  (+3 more)
(+39 files in other folders)
