[project]
name = "clash-royale-mcp"
version = "1.0.0"
description = "MCP server for Clash Royale game integration with Mistral AI"
authors = [
    {name = "Eliott Valette", email = "eliottvalette@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
