[project]
name = "clash-royale-mcp-server"
version = "0.1.0"
description = "MCP Server for Clash Royale AI vs Player"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[[tool.uv.source]]
name = "pypi"
url = "https://pypi.org/simple"